plugins {
    id 'java-library'
}

java {
    sourceCompatibility = '17'
}

group = 'com.rfmajor'
version = '0.0.1-SNAPSHOT'

subprojects {
    repositories {
        mavenCentral()
    }

    test {
        useJUnitPlatform()

        testLogging {
            events "PASSED", "SKIPPED", "FAILED"
        }
    }

}
